--- a/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
@@ -17,6 +17,15 @@
 
 {% render controller('CadpazBundle:Relatorios:encaminhamentos') %}
 <footer><hr></footer>
+
+
+{% render controller('CadpazBundle:Relatorios:origens') %}
+<footer><hr></footer>
+
+
+{% render controller('CadpazBundle:Relatorios:idades') %}
+<footer><hr></footer>
+
 </div>
 
 <div class="relButtons">
