Alteracoes no layout dos relatorios

--- a/src/CadpazBundle/Resources/views/Relatorios/casos.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/casos.html.twig
@@ -11,7 +11,8 @@ Total de casos atendidos: {{ total_casos }}<br>
 <div class="spacer"></div>
 <div style="clear: both"></div>
     
-<div style="float: left; width: 35%">
+{#<div style="float: left; width: 35%">#}
+<div>
 {#Casos por tipo:<br>#}
 <table id="tbl_cas" class="display compact">
     <thead class="tabela_pequena">
@@ -34,7 +35,8 @@ Total de casos atendidos: {{ total_casos }}<br>
 </table>
 </div>
 
-<div style="float: right; width: 65%">
+{#<div style="float: right; width: 65%">#}
+<div>
 <div id="piechart_casos" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 </div>
     <div style="clear: both"></div>
