--- a/src/CadpazBundle/Resources/views/Relatorios/encaminhamentos.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/encaminhamentos.html.twig
@@ -7,7 +7,8 @@
 <div class="spacer"></div>
 <div style="clear: both"></div>
 
-<div style="float: left; width: 30%">
+{#<div style="float: left; width: 30%">#}
+<div>
 {#Encaminhamentos:<br>#}
 <table id="tbl_enc" class="display compact">
     <thead class="tabela_pequena">
@@ -25,7 +26,8 @@
     </tbody>
 </table>
 </div>
-    <div style="float: right; width: 70%">
+    {#<div style="float: right; width: 70%">#}
+    <div>
 <div id="piechart_encaminhamentos" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 </div>
     <div style="clear: both"></div>
