Relatorios de idades e cores adidionados

--- a/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
@@ -22,12 +22,15 @@
 {% render controller('CadpazBundle:Relatorios:origens') %}
 <footer><hr></footer>
 
-{#
+
  {% render controller('CadpazBundle:Relatorios:idades') %}
 <footer><hr></footer> 
-#}
+
 
 {% render controller('CadpazBundle:Relatorios:sexos') %}
+<footer><hr></footer> 
+
+{% render controller('CadpazBundle:Relatorios:cores') %}
 <footer><hr></footer> 
 
 </div>
