--- a/src/CadpazBundle/Resources/views/Configuracoes/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Configuracoes/index.html.twig
@@ -1,7 +1,151 @@
-{% extends "::base.html.twig" %}
+<div style="text-align: center">
+    <h1>Configuracoes</h1>
+</div>
 
-{% block title %}CadpazBundle:Configuracoes:index{% endblock %}
+<h2>Tipos de casos</h2>
 
-{% block body %}
-<h1>Welcome to the Configuracoes:index page</h1>
-{% endblock %}
+<div id="newTipoCasoArea" class="example" style="display: none; width: 400px; background: #FFF">
+    <table>
+    <tr>
+        <td>Tipo</td>
+        <td><input id="tipoCasoInput" type="text"></td>
+    </tr>
+    <tr>
+        <td>Descrição</td>
+        <td><input id="descricaoCasoInput" type="text"></td>
+    </tr>
+    <tr>
+        <td colspan="2">
+            <a href="#" id="newTipoCasoLink">Cadastrar</a><br>
+        </td>
+    </tr>
+    </table>
+</div>
+<a href="#" id="openNewTipoCasoLink">Cadastrar novo tipo</a>
+
+<table id="casosTable" class="cell-border">
+    <thead>
+        <tr>
+            <th>Tipo de caso</th>
+            <th>Descrição</th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for caso in casos %}
+        <tr>
+            <td>{{ caso.tipo }}</td>
+            <td title="{{caso.descricao}}">{{ caso.descricao[:40] ~ '...' }}</td>
+            <td id="{{caso.id}}"><a  class="configCasoLink" href="#editar">Editar</a> - <a class="configCasoLink" href="#remover">Remover</a></td>
+        </tr>
+    {% endfor %}
+    </tbody>
+</table>
+
+<script>
+    $('#casosTable').DataTable( {
+        "paging":   false,
+        "ordering": false,
+        "info":     false,
+        "searching":   false
+    });
+    
+    /*$('#casosTable tr').click(function(e) {
+        
+        e.preventDefault();
+        
+        var href = $(this).find("a").attr("href");
+
+        if(href) {
+
+
+            alert(href);
+            
+            //$.ajax({url: href, success: function(result){  }});
+        }
+    });*/
+    $(".configCasoLink").on('click',function(e){
+        e.preventDefault();
+        var id=$(this).closest('td').attr('id');
+        //alert(id);
+        if ($(this).attr('href') === '#editar') {
+            $.ajax({
+                url: Routing.generate('configuracoes_caso_tipo_edit',{'id':id}),
+                success: function(responseText) {
+                    
+                    alert(responseText);
+                    
+
+                    $('#newTipoCasoArea').html(responseText);
+
+
+                    window.configPopup = $('#newTipoCasoArea').bPopup({
+                            speed: 650,
+                            transition: 'slideIn',
+                            transitionClose: 'slideBack',
+                        });
+                }
+            });
+        } else if ($(this).attr('href') === '#remover') {
+            $.ajax({
+                url: Routing.generate('configuracoes_caso_tipo_delete',{'id':id}),
+                success: function(responseText) {
+                    
+
+                    $("#dataArea").html(responseText);
+                }
+            });
+        }
+        
+        e.preventDefault();
+    });
+    
+    $("#openNewTipoCasoLink").on("click", function(e) {
+        
+        e.preventDefault();
+        
+        $.ajax({
+            url: Routing.generate('configuracoes_caso_tipo_new'),
+            success: function(responseText) {
+                
+                
+                $('#newTipoCasoArea').html(responseText);
+                
+                
+                window.configPopup = $('#newTipoCasoArea').bPopup({
+                        speed: 650,
+                        transition: 'slideIn',
+                        transitionClose: 'slideBack',
+                    });
+            }
+        });
+        
+        
+    });
+    
+    
+    
+    
+   /* 
+    $("#newTipoCasoLink").on('click', function(e) {
+        e.preventDefault();
+       
+        $.ajax({
+            url: Routing.generate('configuracoes_caso_tipo_new'),
+            type: 'POST',
+            data: {
+                'tipo': $('#tipoCasoInput').val(),
+                'descricao': $('#descricaoCasoInput').val()
+            },
+            success: function(response) {
+                if (response === 'ok')
+                {
+                    $('#confLink')[0].click();
+                }
+            }
+        });
+    });
+    */
+   
+    $('td[title]').qtip();
+</script>
