Relatorio de rendas adicionado

--- a/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
+++ b/src/CadpazBundle/Resources/views/Relatorios/index.html.twig
@@ -22,6 +22,8 @@
 {% render controller('CadpazBundle:Relatorios:origens') %}
 <footer><hr></footer>
 
+{% render controller('CadpazBundle:Relatorios:rendaFamiliar') %}
+<footer><hr></footer>
 
  {% render controller('CadpazBundle:Relatorios:idades') %}
 <footer><hr></footer> 
