--- a/src/CadpazBundle/Resources/views/Caso/new.html.twig
+++ b/src/CadpazBundle/Resources/views/Caso/new.html.twig
@@ -32,6 +32,7 @@
                         //tags: true,
                         data: data,
                          width: '100%',
+                         language: 'pt_BR',
                         /*createTag: function (params) {
                           return {
                             id: params.term,
