--- a/web/bundles/cadpaz/css/geral.css
+++ b/web/bundles/cadpaz/css/geral.css
@@ -518,7 +518,7 @@ body.loading {
 /* Anytime the body has the loading class, our
    modal element will be visible */
 body.loading .modal {
-    display: block;
+    //display: block;
 }
 
 
@@ -559,3 +559,6 @@ textarea {
 }
 
 
+.oculto {
+    display: none;
+}
